# km3sim

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  KM3Sim.cc  Makefile  README  README.md  README_Geom.txt  README_OMSim.txt  README_Sim.txt  conf.py  dox.cfg  dox.rc  g4_performance_tips.md  km3sim.cc  run_KM3Sim.py  runsim.sh
data/: INPUTParametersRun_3500_scatter_WPD3.3_p0.0075_1.0  orca_120strings_av23min20mhorizontal_18OMs_alt9mvertical_v1.detx  test.sh
include/: G4OpBoundaryProcess.hh  G4OpMie.hh  HAVertexMuons.hh  HOURSevtREAD.hh  HOURSevtWRITE.hh  KM3Cathods.hh  KM3Cherenkov.hh  KM3Cherenkov.hh_newmie  KM3Cherenkov_Along.hhkeep  KM3Definitions.h  KM3Definitions.h_newmie  KM3Detector.hh  KM3Detector.hh_keep2013  KM3Detector.hh_newmie  KM3EMAngularFlux.hh  KM3EMDeltaFlux.hh  KM3EMDirectFlux.hh  KM3EMDistanceFlux.hh  KM3EMEnergyFlux.hh  KM3EMFlux.hhkeep  KM3EMShowerModel.hh  KM3EMShowerModel.hh_old  KM3EMTimePointDis.hh  KM3EMTimePointDis.hh_keep2013  KM3EventAction.hh  KM3EventAction.hhkeep  KM3HAEnergyFlux.hh  KM3HAShowerModel.hh  KM3Hit.hh  KM3MuonParam.hh  KM3OpticalPhotonInfo.hhkeep  KM3Physics.hh  KM3PrimaryGeneratorAction.hh  KM3SD.hh  KM3SD.hh_keep2013  KM3Sim.h  KM3StackingAction.hh  KM3StackingAction.hhkeep  KM3SteppingAction.hh  KM3TrackInformation.hh  (+4 more)
km3sim_r1v6/: KM3Sim.cc  Makefile  setup_env.sh
km3sim_r1v6/include/: G4OpBoundaryProcess.hh  HOURSevtREAD.hh  HOURSevtWRITE.hh  KM3Cherenkov.hh_newmie  KM3Cherenkov_Along.hhkeep  KM3Definitions.h_newmie  KM3Detector.hh_keep2013  KM3Detector.hh_newmie  KM3EMAngularFlux.hh  KM3EMFlux.hhkeep  KM3EMShowerModel.hh_old  KM3EMTimePointDis.hh_keep2013  KM3EventAction.hhkeep  KM3HAEnergyFlux.hh  KM3HAShowerModel.hh  KM3Hit.hh  KM3MuonParam.hh  KM3OpticalPhotonInfo.hhkeep  KM3PrimaryGeneratorAction.hh  KM3SD.hh_keep2013  KM3Sim.h  KM3StackingAction.hh  KM3StackingAction.hhkeep  KM3TrackInformation.hh  KM3TrackInformation.hh_newmie  KM3Visualisation.hh  io_gcc.hh
km3sim_r1v6/src/: G4OpBoundaryProcess_93.cckeep  G4OpMie.cc_newmie  G4OpMie_93.cckeep  G4Sphere.cckeep  HOURSevtREAD.cc  KM3Cherenkov.cc_newmie  KM3Cherenkov_93.cckeep  KM3Cherenkov_Along.cckeep  KM3Detector.cc_keep2013  KM3Detector.cc_newmie  KM3EMAngularFlux.cc  KM3EMDirectFlux.cc  KM3EMEnergyFlux.cc  KM3EMShowerModel.cc_old  KM3EMShowerModel_93.cckeep  KM3EMTimePointDis.cc_keep2013  KM3EventAction.cckeep  KM3HAShowerModel_93.cckeep  KM3OpticalPhotonInfo.cckeep  KM3Physics.cckeep  KM3Physics_93.cckeep  KM3PrimaryGeneratorAction.cc  KM3PrimaryGeneratorAction.cckeep  KM3SD.cc  KM3SD.cc_keep2013  KM3SD.cc_newmie  KM3StackingAction.cc  KM3StackingAction.cckeep  KM3SteppingAction.cckeep  KM3TrackInformation.cc  KM3TrackInformation.cc_newmie  KM3TrackingAction.cc  KM3TrackingAction.cc_newmie  KM3Visualisation.cc  RandomGamma.cc  io_gcc.cc
src/: .clang-format  EvtIO.cc  EvtIO.h  G4OpBoundaryProcess.cc  G4OpBoundaryProcess.hh  G4OpBoundaryProcess_93.cckeep  G4OpMie.cc  G4OpMie.cc_newmie  G4OpMie.h  G4OpMie.hh  G4OpMie_93.cckeep  G4Sphere.cckeep  HAVertexMuons.cc  HAVertexMuons.h  HAVertexMuons.hh  HOURSevtREAD.cc  HOURSevtREAD.h  HOURSevtREAD.hh  HOURSevtRead.cc  HOURSevtRead.h  HOURSevtWRITE.cc  HOURSevtWRITE.h  HOURSevtWRITE.hh  KM3Cathods.cc  KM3Cathods.h  KM3Cathods.hh  KM3Cherenkov.cc  KM3Cherenkov.cc_newmie  KM3Cherenkov.h  KM3Cherenkov.hh  KM3Cherenkov_93.cckeep  KM3Cherenkov_Along.cckeep  KM3Definitions.h  KM3Detector.cc  KM3Detector.cc_keep2013  KM3Detector.cc_newmie  KM3Detector.h  KM3Detector.hh  KM3EMAngularFlux.cc  KM3EMAngularFlux.h  (+79 more)
tmp/: geo_orca_120strings_av23min20mhorizontal_18OMs_alt9mvertical_v1.gdml
